<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="5"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:orderInCategory="10"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_choose_all"
        android:orderInCategory="20"
        android:title="@string/choose_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_selected"
        android:icon="@android:drawable/btn_star_big_on"
        android:orderInCategory="25"
        android:title="@string/delete_selected"
        app:showAsAction="never" />
</menu>