<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@drawable/side_nav_bar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/userImageView"
        android:layout_width="@dimen/_bar_icon_size"
        android:layout_height="@dimen/_bar_icon_size"
        android:contentDescription="@string/bar_img_hint"
        android:paddingTop="@dimen/_8dp"
        app:srcCompat="@drawable/user_icon"/>

    <TextView
        android:id="@+id/drawer_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/some_user_name"
        android:textSize="@dimen/_28sp"/>

    <TextView
        android:id="@+id/drawer_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_email_example" />

</LinearLayout>

