<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/alert_remove_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_delete_message"
        android:textAlignment="center"
        android:textSize="@dimen/_24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/alert_remove_yes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:layout_weight="1"
            android:text="@string/alert_remove_yes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/alert_remove_abort_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:layout_weight="1"
            android:text="@string/alert_remove_abort" />
    </LinearLayout>
</LinearLayout>

