<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_note_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CreateNoteFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_title_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_content_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_content_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/date_button_text" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/date_view"
        android:name="gu_android_1089.mynotes.ui.DatePickerFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_16dp"
        android:visibility="gone" />

    <!--        здесь должны быть списки выбора категории и цвета,
                но пока материал не изучен-->

</LinearLayout>